dev/manifests/cluster-config/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "tekton.webhook.config"
webhooks:
  - name: "tekton.webhook.config"
    rules:
      - apiGroups: ["tekton.dev"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pipelines", "tasks"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: tekton-webhook
        path: /validate-pipelines-and-tasks
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJBQ0NRRGNSQjBvV2ptbXdUQU5CZ2tx
[...]
        LS0tLQo=
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
